infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: kimbeautyspa.com
      http:
        paths:
          - path: /users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: products-srv
                port:
                  number: 3000
          - path: /branchs/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: branchs-srv
                port:
                  number: 3000
          - path: /shifts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shifts-srv
                port:
                  number: 3000
          - path: /services/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: services-srv
                port:
                  number: 3000
          - path: /orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - path: /payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - path: /cart/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-srv
                port:
                  number: 3000
          - path: /appointments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: appointments-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
#     service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.kimbeautyspa.io.vn'
#   labels:
#     helm.sh/chart: ingress-nginx-2.0.3
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/version: 0.32.0
#     app.kubernetes.io/managed-by: Helm
#     app.kubernetes.io/component: controller
#   name: ingress-nginx-controller
#   namespace: ingress-nginx
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: http
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: https
#   selector:
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/component: controller
